Fix visual overlap issue when tabbing through menu

--- a/src/client/components/Nav/Nav.less
+++ b/src/client/components/Nav/Nav.less
@@ -26,6 +26,10 @@ nav.Nav {
     }
 
     .focusable();
+
+    &:focus {
+      z-index: 1000;
+    }
   }
 
   > a .typo-normal {
